--- a/lab3+/evilla/src/assets/styles/colors.module.scss
+++ b/lab3+/evilla/src/assets/styles/colors.module.scss
@@ -1,13 +1,12 @@
-
 $box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
-$copy-light: #3B3B3B ;
+$copy-light: #3B3B3B;
 $primary-light: #FFC044;
 $secondary-light: #e7d6a6;
 $tertiary-light: #ffebb4;
 
-$background-light: #FFFFFF;
-$highlight-light: #929292;
+$background-light: #bcbcbc;
+$highlight-light: #efefb3;
 
 $copy-dark: #c5c4c3;
 $primary-dark: #852c11;
@@ -19,7 +18,7 @@ $highlight-dark: #141414;
 
 :export {
     boxShadow: $box-shadow;
-    
+
     lightBackground: $background-light;
     lightHighlight: $highlight-light;
     lightCopyText: $copy-light;
